log
Wed 03 May 2023 08:36:03 PM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:25: error: comparison between pointer and integer [-Werror]
   56 |   if (n->sudo[fil][col] == "\0"){
      |                         ^~
sudoku.c:56:25: error: comparison with string literal results in unspecified behavior [-Werror=address]
sudoku.c:58:19: error: assignment to expression with array type
   58 |     inicial->sudo = n->sudo;
      |                   ^
sudoku.c:60:20: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   60 |     pushBack(list, newMov);
      |                    ^~~~~~
      |                    |
      |                    char
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘char’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
62b450d
Wed 03 May 2023 08:38:17 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:29: error: comparison between pointer and integer [-Werror]
   58 |       if (n->sudo[fil][col] == "\0"){
      |                             ^~
sudoku.c:58:29: error: comparison with string literal results in unspecified behavior [-Werror=address]
sudoku.c:60:23: error: assignment to expression with array type
   60 |         inicial->sudo = n->sudo;
      |                       ^
sudoku.c:62:24: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   62 |         pushBack(list, newMov);
      |                        ^~~~~~
      |                        |
      |                        char
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘char’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
b0bd28d
Wed 03 May 2023 08:38:39 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:29: error: comparison between pointer and integer [-Werror]
   58 |       if (n->sudo[fil][col] == "\0"){
      |                             ^~
sudoku.c:58:29: error: comparison with string literal results in unspecified behavior [-Werror=address]
sudoku.c:60:23: error: assignment to expression with array type
   60 |         inicial->sudo = n->sudo;
      |                       ^
sudoku.c:62:24: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   62 |         pushBack(list, newMov);
      |                        ^~~~~~
      |                        |
      |                        int
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
b1a2525
Wed 03 May 2023 08:39:56 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:29: error: comparison between pointer and integer [-Werror]
   58 |       if (n->sudo[fil][col] == NULL){
      |                             ^~
sudoku.c:60:23: error: assignment to expression with array type
   60 |         inicial->sudo = n->sudo;
      |                       ^
sudoku.c:62:24: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   62 |         pushBack(list, newMov);
      |                        ^~~~~~
      |                        |
      |                        int
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
cfc45ea
Wed 03 May 2023 08:58:36 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:23: error: assignment to expression with array type
   60 |         inicial->sudo = n->sudo;
      |                       ^
sudoku.c:62:24: error: passing argument 2 of ‘pushBack’ makes pointer from integer without a cast [-Werror=int-conversion]
   62 |         pushBack(list, newMov);
      |                        ^~~~~~
      |                        |
      |                        int
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘int’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
81bd9ce
Wed 03 May 2023 08:59:52 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:23: error: assignment to expression with array type
   60 |         inicial->sudo = n->sudo;
      |                       ^
sudoku.c:61:33: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   61 |         inicial->sudo[fil][col] = newMov;
      |                                 ^
cc1: all warnings being treated as errors
Compilation failed
3fc6fd0
Wed 03 May 2023 09:07:48 PM UTC: 
 sudoku.c | 36 +++++++++++++++++++++++++++---------
 1 file changed, 27 insertions(+), 9 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:54:10: error: expected ‘;’ before ‘int’
   54 |   int fil
      |          ^
      |          ;
   55 |   int col
      |   ~~~     
sudoku.c:55:10: error: expected ‘;’ before ‘int’
   55 |   int col
      |          ^
      |          ;
   56 |   int block_row = 3;
      |   ~~~     
sudoku.c:59:14: error: ‘col’ undeclared (first use in this function)
   59 |     if (i != col) {
      |              ^~~
sudoku.c:59:14: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:60:24: error: implicit declaration of function ‘get_node’ [-Werror=implicit-function-declaration]
   60 |       Node* adj_node = get_node(fil, i);
      |                        ^~~~~~~~
sudoku.c:60:33: error: ‘fil’ undeclared (first use in this function)
   60 |       Node* adj_node = get_node(fil, i);
      |                                 ^~~
sudoku.c:61:19: error: ‘Node’ has no member named ‘value’
   61 |       if (adj_node->value == 0) {
      |                   ^~
sudoku.c:62:9: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   62 |         push_back(list, adj_node);
      |         ^~~~~~~~~
      |         pushBack
sudoku.c:69:19: error: ‘Node’ has no member named ‘value’
   69 |       if (adj_node->value == 0) {
      |                   ^~
sudoku.c:78:26: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   78 |         Node* adj_node = get_node(i, j);
      |                          ^~~~~~~~
sudoku.c:79:21: error: ‘Node’ has no member named ‘value’
   79 |         if (adj_node->value == 0) {
      |                     ^~
cc1: all warnings being treated as errors
Compilation failed
8e972cd
